--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/metropolis-2" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -26,6 +24,7 @@
         </a>
       </div>
     </div>
+
     <!-- HTML Ainun -->
   </body>
 </html>
