add agum file index.html and sty;e.css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+< lang="en">
 
 <head>
     <meta charset="UTF-8" />
@@ -41,11 +41,9 @@
 
 </body>
 
-</html>
     <!-- HTML Ainun -->
 
     <!-- HTML AGUM  -->
-    <html lang="en">
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
