--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             </br>
         </div>
     </div>
+
+    <br><br>
     <!-- HTML Ainun -->
     <div class="card">
         <img src="https://moladin.com/assets/images/Moladin-Dealer.jpg" alt="" />
@@ -34,25 +36,14 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg h-6 w-6 text-primary-500">
             <line x1="5" y1="12" x2="19" y2="12"></line>
             <polyline points="12 5 19 12 12 19"></polyline>
-          </svg>
+        </svg>
             </a>
         </div>
     </div>
-
-</body>
-
     <!-- HTML Ainun -->
-
+<br><br>
     <!-- HTML AGUM  -->
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Latihan</title>
-            <link rel="stylesheet" href="latihan.css">
-            <link href="https://fonts.cdnfonts.com/css/metropolis-2" rel="stylesheet" />
-        </head>
         <!-- header -->
-        <body>
             <div class="container">
                 <div class="image">
                 <img class="gambar" src="https://moladin.com/assets/images/Moladin-Dealer.jpg" alt="Moladin">
@@ -75,6 +66,8 @@
         </div>
         </div>
         </div>
+
+        <!-- HTML AGUM -->
         </body>
         </html>
 
