--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
         </br> 
         </div>
       </div>
+
+        <!-- html akbar -->
+    <div class="akbarcard">
+        <img src="maladin.jpg" alt="Avatar" style="width:100%">
+        <div class="akbarcontainer">
+          <h4><b>Moladin Dealer</b></h4>
+        </br> 
+          <p>Pembiayaan usaha Dealer dengan pencairan tinggi untuk pembayaran jangka pendek atau menengah.</p>
+        </br>  
+          <a href="https://www.youtube.com/watch?v=e1DydjIHZ54">Selengkapnya &#10230; </a>
+        </br> 
+        </div>
+      </div>
       
   </body>
 </html>
