--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
         </br> 
         </div>
       </div>
+
+    <!-- HTML Ainun -->
+    <div class="card">
+      <img src="https://moladin.com/assets/images/Moladin-Dealer.jpg" alt="" />
+      <div class="detail">
+        <h3>Moladin Dealer</h3>
+        <p>Pembiayaan usaha Dealer dengan pencairan tinggi untuk pembayaran jangka pendek atau menengah.</p>
+        <a href="#" class="button">
+          <span class="selengkapnya"> Selengkapnya </span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg h-6 w-6 text-primary-500">
+            <line x1="5" y1="12" x2="19" y2="12"></line>
+            <polyline points="12 5 19 12 12 19"></polyline>
+          </svg>
+        </a>
+      </div>
+    </div>
       
   </body>
 </html>
