--- a/latihan.html
+++ b/latihan.html
@@ -28,7 +28,7 @@
 
   <!-- HTML AKBAR -->
   <div class="akbarcard">
-    <img src="oppa.jpg" alt="Avatar" style="width:100%">
+    <img src="https://moladin.com/assets/images/Moladin-Dealer.jpg" alt="Avatar" style="width:100%">
     <div class="akbarcontainer">
       <h4><b>Moladin Dealer</b></h4>
     </br> 
@@ -43,7 +43,7 @@
 
   <!-- HTML Rafi -->
   <div class="rafi-card">
-    <img src="maladin.jpg" alt="Avatar">
+    <img src="https://moladin.com/assets/images/Moladin-Dealer.jpg" alt="Avatar">
 
     <div class="rafi-container">
       <h4>Moladin Dealer</h4>
